<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/navMenu_editProfile"
            android:title="Edit profile"/>

    <group android:id="@+id/menu_group1">
        <item
            android:id="@+id/navMenu_home"
            android:icon="@drawable/ic_home"
            android:title="Home"/>
        <item
            android:id="@+id/navMenu_wallet"
            android:icon="@drawable/ic_wallet4"
            android:title="Wallets"/>
        <item
            android:id="@+id/navMenu_report"
            android:icon="@drawable/ic_report"
            android:title="Report" />
        <item
            android:id="@+id/navMenu_transactionHistory"
            android:icon="@drawable/ic_history"
            android:title="Transaction" />
        <item
            android:id="@+id/navMenu_invitations"
            android:icon="@android:drawable/sym_action_email"
            android:title="Invitations"/>
        <item
            android:id="@+id/navMenu_invitePartner"
            android:icon="@drawable/invite_icon"
            android:title="Invite a partner" />
        <item
            android:id="@+id/navMenu_about"
            android:icon="@drawable/about_icon"
            android:title="About" />
    </group>

        <item
            android:id="@+id/navMenu_logout"
            android:title="Log out" />
</menu>