<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background2">
            <!--

                android:background="@drawable/background2">

                <ImageView
                    android:id="@+id/add"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/ic_baseline_add_circle_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                   />

            >>>>>>> origin/master
                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ic_baseline_menu_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                    -->

            <!--                <ImageView-->
            <!--                    android:id="@+id/notification"-->
            <!--                    android:layout_width="45dp"-->
            <!--                    android:layout_height="45dp"-->
            <!--                    android:layout_marginTop="50dp"-->
            <!--                    android:layout_marginEnd="20dp"-->
            <!--                    android:background="@drawable/ic_baseline_notifications_none_24"-->
            <!--                    app:layout_constraintEnd_toEndOf="parent"-->
            <!--                    app:layout_constraintTop_toTopOf="parent" />-->

            <RelativeLayout
                android:id="@+id/linearLayout2"
                android:layout_width="298dp"
                android:layout_height="160dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/whitegrayback"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/totalBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/addincome"
                    android:textColor="#3F51B5"
                    android:textSize="26sp"
                    tools:text="JD 4500" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="90dp"
                    android:text="Total Balance"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/addincome"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="68dp"
                    android:background="@drawable/ic_baseline_add_circle_24"
                    android:onClick="openAddIncome" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="Last Records Overview"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lastRecord"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="1.0"
                tools:listitem="@layout/transation_history_home_item"/>

            <TextView
                android:id="@+id/noData_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Data Found"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/lastRecord"
                app:layout_constraintStart_toStartOf="@+id/lastRecord"
                app:layout_constraintTop_toTopOf="@+id/lastRecord"
                app:layout_constraintVertical_bias="0.371" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/purple_light"
                android:src="@drawable/ic_baseline_add_24"
                app:fabSize="normal"
                app:borderWidth="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/scan_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/purple_light"
                android:src="@drawable/ic_baseline_photo_camera_24"
                app:fabSize="normal"
                app:borderWidth="0dp"
                app:layout_constraintBottom_toTopOf="@+id/add_fab"
                app:layout_constraintEnd_toEndOf="@+id/add_fab"
                app:layout_constraintStart_toStartOf="@+id/add_fab" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/manually_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/purple_light"
                android:src="@drawable/ic_baseline_manually"
                app:borderWidth="0dp"
                app:fabSize="normal"
                app:layout_constraintBottom_toTopOf="@+id/scan_fab"
                app:layout_constraintEnd_toEndOf="@+id/scan_fab"
                app:layout_constraintStart_toStartOf="@+id/scan_fab" />

            <TextView
                android:id="@+id/addScanActionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Scan"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/scan_fab"
                app:layout_constraintEnd_toStartOf="@+id/scan_fab"
                app:layout_constraintTop_toTopOf="@+id/scan_fab" />

            <TextView
                android:id="@+id/addManuallyActionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Manually"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/manually_fab"
                app:layout_constraintEnd_toStartOf="@+id/manually_fab"
                app:layout_constraintTop_toTopOf="@+id/manually_fab" />

            <!--app:layout_constraintTop_toBottomOf="@+id/textView7"/> -->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <include layout="@layout/navigtion_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>