...
                android:gravity="center"
                android:text="Welcome to \nWallet Manager"
                android:textColor="#5367F0"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toTopOf="@+id/signUPbutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/signUPbutton"
...
                android:layout_height="wrap_content"
                android:background="@drawable/dark_filled_button"
                android:onClick="SignUpOnClick"
                android:text="Sign-UP"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@+id/SignINbutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/SignINbutton"
...
